compplete web-app feature with contact form

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
       <div class="logo">Logo</div>
       <div class="menu">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#content">Services</a></li>
+          <li><a href="#content">Portfolio</a></li>
+          <li><a href="#content">About</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </div>
 
-    <div class="banner">
+    <div id="home" class="banner">
       <div class="banner-text">
         <div class="banner-text-items">
           <h2>Banner Text Heading</h2>
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <div class="main-content">
+    <div id="content" class="main-content">
       <div class="main1">
         <h2>Main Heading One</h2>
         <p>
@@ -41,7 +41,7 @@
         </p>
       </div>
 
-      <div class="main2">
+      <div class="main1">
         <h2>Main Heading Two</h2>
         <p>
           Lorem ipsum is placeholder text commonly used in the graphic, print,
@@ -49,7 +49,7 @@
         </p>
       </div>
 
-      <div class="main3">
+      <div class="main1">
         <h2>Main Heading Three</h2>
         <p>
           Lorem ipsum is placeholder text commonly used in the graphic, print,
@@ -58,7 +58,7 @@
       </div>
     </div>
 
-    <div class="contact">
+    <div id="contact" class="contact">
         <div class="contact-text">
             <div class="contact-items">
                 <h2>Contact Us</h2>
